Toteutettu kirjautuminen ja lisätty etusivulle käyttäjän omat työt

--- a/app/views/base.html
+++ b/app/views/base.html
@@ -46,6 +46,7 @@
                         <li><a href="{{base_path}}/kayttajat">Käyttäjät</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
+                        <li><a href="{{base_path}}/kayttajaMuokkaus/{{user_logged_in.tunnus}}">Omat tiedot</a></li>                        
                         <li><a href="{{base_path}}/logout">Kirjaudu ulos</a></li>
                     </ul>
                 </div>
