--- a/app/views/etusivu/etusivu.html
+++ b/app/views/etusivu/etusivu.html
@@ -1,31 +1,79 @@
 {% extends "base.html" %}
 {% block content %}
 
+
+
 {% if user_logged_in %}
 
-<div style="color:green">
-<h1>Tervetuloa {{user_logged_in.tunnus}}!</h1>
+<div style="color:#3366ff">
+    <h1>Tervetuloa {{user_logged_in.tunnus}}!</h1>
 </div>
+
+{% if message %}
+<div class="alert alert-success">
+    {{message}}
+</div>
+{% endif %}
+
+<div style="color:green"><h2>Omat työt</h2></div>
+<br>
+
+<table class="table table-striped table-bordered">
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Kuvaus</th>
+            <th>Työn kohde</th>
+            <th>Työkalu</th>
+            <th>Tehty</th>
+        </tr>
+    </thead>
+
+
+    <tbody>
+        {% if omatTyot %}
+
+        {% for tyo in omatTyot %}
+        <tr>
+            <td>{{tyo.id}}</td>
+            <td><a href="{{base_path}}/tyo/{{tyo.id}}">{{tyo.kuvaus}}</td>
+            <td><a href="{{base_path}}/tyonKohdeKuvaus/{{tyo.kohde}}">{{tyo.kohde}}</td>
+            <td><a href="{{base_path}}/tyokaluKuvaus/{{tyo.tyokalu}}">{{tyo.tyokalu}}</td>
+            {% if tyo.tehty %}
+            <td> <input type="checkbox" checked="" disabled="disabled" /></td>
+            {% else %}
+            <td> <input type="checkbox" disabled="disabled" /></td>
+            {% endif %}
+        </tr>
+        {% endfor %}
+        
+        {% else %}
+        
+        <div class="alert alert-danger">Ei sinulle osoitettuja töitä tällä hetkellä!</div>
+        
+        {% endif %}
+    </tbody>
+</table>
 
 
 
 
 {% else %}
 <div style="color:green">
-<h1>Tervetuloa työnjakajaan!</h1>
+    <h1>Tervetuloa työnjakajaan!</h1>
 </div>
 
- {% if message %}
+{% if message %}
 <div class="alert alert-success">
-  {{message}}
+    {{message}}
 </div>
-  {% endif %}
-  
+{% endif %}
+
 <p> Työnjakajalla voit helposti jakaa esimerkiksi kotitaloutesi kotityöt perheen kesken!</p>
 <p> <a href="{{base_path}}/login">Kirjaudu sisään</a> ja aloita käyttö!</p>
 
 <a href="{{base_path}}/login" class="btn btn-primary">Kirjaudu</a><a href="{{base_path}}/rekisteroityminen" class="btn btn-default">Rekisteröidy</a>
 
 {% endif %}
-  
+
 {% endblock %}
