--- a/app/views/kayttaja/kayttajat.html
+++ b/app/views/kayttaja/kayttajat.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
+
+{% if user_logged_in %}
 <div style="color:green"><h1>Näkymä - käyttäjät</h1></div>
 <br>
 <form action="{{base_path}}/etsiKayttaja" method="post">
@@ -44,5 +46,10 @@
     </tbody>
 </table>
 
+{% else %}
+
+<div style="color:green"><h1>Kirjaudu sisään tarkastellaksesi käyttäjiä!</h1></div>
+
+{% endif %}
 
 {% endblock %}
