--- a/app/views/tyo/tyoMuokkaus.html
+++ b/app/views/tyo/tyoMuokkaus.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 
+{% if user_logged_in.admin %}
+
 {% if errors %}
 <div class="alert alert-danger">
     <ul>
@@ -75,4 +77,11 @@
         <button type="submit" class="btn btn-default">Muokkaa</button>
     </div>
 </form>
+
+{% else %}
+
+<div style="color:green"><h1>Kirjaudu sisään admin-tunnuksella muokataksesi töitä!</h1></div>
+
+{% endif %}
+
 {% endblock %}
