--- a/app/views/tyo/tyot.html
+++ b/app/views/tyo/tyot.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
+
+{% if user_logged_in %}
+
 <div style="color:green"><h1>Näkymä - Työt</h1></div>
 <br>
 <form action="{{base_path}}/etsiTyo" method="post">
@@ -51,5 +54,11 @@
         {% endfor %}
     </tbody>
 </table>
+
+{% else %}
+
+<div style="color:green"><h1>Kirjaudu sisään tarkastellaksesi töitä!</h1></div>
+
+{% endif %}
 
 {% endblock %}
