--- a/app/views/tyo/uusiTyo.html
+++ b/app/views/tyo/uusiTyo.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 
+{% if user_logged_in %}
+
 {% if errors %}
 <div class="alert alert-danger">
     <ul>
@@ -71,4 +73,11 @@
         <button type="submit" class="btn btn-default">Luo</button>
     </div>
 </form>
+
+{% else %}
+
+<div style="color:green"><h1>Kirjaudu sisään luodaksesi töitä!</h1></div>
+
+{% endif %}
+
 {% endblock %}
