--- a/app/views/tyokalu/tyokaluKuvaus.html
+++ b/app/views/tyokalu/tyokaluKuvaus.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
+{% if user_logged_in %}
 {% if user_logged_in.admin %}
 
 {% if errors %}
@@ -60,6 +61,12 @@
 </div>
   {% endif %}
 {% endfor%}
+
+{% endif %}
+
+{% else %}
+
+<div style="color:green"><h1>Kirjaudu sisään tarkastellaksesi työkaluja!</h1></div>
 
 {% endif %}
 
