--- a/app/views/tyokalu/uusiTyokalu.html
+++ b/app/views/tyokalu/uusiTyokalu.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 
+
+{% if user_logged_in.admnin %}
 {% if errors %}
 <div class="alert alert-danger">
     <ul>
@@ -23,4 +25,10 @@
     
     <button type="submit" class="btn btn-default">Luo</button>
 </form>
+
+{% else %}
+
+<div style="color:green"><h1>Kirjaudu sisään admin-tunnuksilla luodaksesi työkaluja!</h1></div>
+
+{% endif %}
 {% endblock %}
