--- a/app/views/tyonKohde/tyonKohdeKuvaus.html
+++ b/app/views/tyonKohde/tyonKohdeKuvaus.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 
+{% if user_logged_in %}
+
 {% if user_logged_in.admin %}
 
 {% if errors %}
@@ -58,6 +60,12 @@
 </div>
   {% endif %}
 {% endfor %}
+
+{% endif %}
+
+{% else %}
+
+<div style="color:green"><h1>Kirjaudu sisään tarkastellaksesi työn kohteita!</h1></div>
 
 {% endif %}
 {% endblock %}
