--- a/app/views/tyonKohde/tyonKohdeMuokkaus.html
+++ b/app/views/tyonKohde/tyonKohdeMuokkaus.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 
+{% if user_logged_in.admin %}
+
 {% if errors %}
 <div class="alert alert-danger">
     <ul>
@@ -24,4 +26,11 @@
     
     <button type="submit" class="btn btn-default">Muuta</button>
 </form>
+
+{% else %}
+
+<div style="color:green"><h1>Kirjaudu sisään admin-tunnuksilla muokataksesi työn kohteita!</h1></div>
+
+{% endif %}
+
 {% endblock %}
