--- a/app/views/tyonKohde/uusiTyonKohde.html
+++ b/app/views/tyonKohde/uusiTyonKohde.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 
+{% if user_logged_in.admin %}
+
 {% if errors %}
 <div class="alert alert-danger">
     <ul>
@@ -23,4 +25,11 @@
     
     <button type="submit" class="btn btn-default">Luo</button>
 </form>
+
+{% else %}
+
+<div style="color:green"><h1>Kirjaudu sisään admin-tunnuksilla luodaksesi työn kohteita!</h1></div>
+
+{% endif %}
+
 {% endblock %}
