Korjattu pari bugia

--- a/app/views/tyokalu/uusiTyokalu.html
+++ b/app/views/tyokalu/uusiTyokalu.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 
-{% if user_logged_in.admnin %}
+{% if user_logged_in.admin %}
 {% if errors %}
 <div class="alert alert-danger">
     <ul>
