--- a/app/views/etusivu/login.html
+++ b/app/views/etusivu/login.html
@@ -2,6 +2,11 @@
 {% block content %}
 <h1>Kirjaudu sisään</h1>
 
+{% if message %}
+<div class="alert alert-success">
+    {{message}}
+</div>
+{% endif %}
 {% if error %}
 <div class="alert alert-danger">
     <label>{{error}}</label>
