--- a/app/views/tyo/uusiTyo.html
+++ b/app/views/tyo/uusiTyo.html
@@ -48,11 +48,7 @@
     <p><strong>Tekijät:</strong></p>
     <div class="form-group">
         <select name="tekijat[]" size="5" multiple>
-<!--            {% if attributes.tekijat %}
-            
-            {% else %}
-            <option value="dummy" selected="selected" hidden></option>
-            {% endif %}-->
+
             {% for k in kayttajat %}
                 {% if k.tunnus in attributes.tekijat %}
                     <option value="{{k.tunnus}}" selected="selected">{{k.tunnus}}</option>
@@ -67,7 +63,7 @@
     </div>
     <div class="form-group">
         <label for="tarkempi_kuvaus">Tarkempi kuvaus</label>
-        <textarea rows="12" cols="20" class="form-control" name="tarkempi_kuvaus" placeholder="Anna tarkempi kuvaus" value="{{attributes.tarkempi_kuvaus}}"></textarea>
+        <textarea rows="12" cols="20" class="form-control" name="tarkempi_kuvaus">{{attributes.tarkempi_kuvaus}}</textarea>
     </div>    
     <div class="form-group">
         <button type="submit" class="btn btn-default">Luo</button>
