--- a/app/views/tyonKohde/tyonKohdeKuvaus.html
+++ b/app/views/tyonKohde/tyonKohdeKuvaus.html
@@ -15,23 +15,21 @@
 </div>
 {% endif %}
 
-{% for t in tyonKohde %}
-<div style="color:green"><h1>{{t.kuvaus}}</h1></div>
+<div style="color:green"><h1>{{tyonKohde.kuvaus}}</h1></div>
 <p>
-    <a href="{{base_path}}/tyonKohdePoisto/{{t.id}}" class="btn btn-danger">Poista</a> <a href="{{base_path}}/tyonKohdeMuokkaus/{{t.id}}" class="btn btn-default">Muokkaa</a>
+    <a href="{{base_path}}/tyonKohdePoisto/{{tyonKohde.id}}" class="btn btn-danger">Poista</a> <a href="{{base_path}}/tyonKohdeMuokkaus/{{tyonKohde.id}}" class="btn btn-default">Muokkaa</a>
 </p>
 <ul>
-    <li><strong>Lisäyspäivä:</strong> {{t.luotu}}</li>
+    <li><strong>Luomispäivä:</strong> {{tyonKohde.luotu}}</li>
 </ul>
 
-<p><strong>Tarkempi kuvaus:</strong> {{t.tarkempi_kuvaus}}</p>
+<p><strong>Tarkempi kuvaus:</strong> {{tyonKohde.tarkempi_kuvaus}}</p>
 
  {% if message != null %}
 <div class="alert alert-success">
   {{message}}
 </div>
   {% endif %}
-{% endfor %}
 
 {% else %}
 
@@ -45,21 +43,19 @@
 </div>
 {% endif %}
 
-{% for t in tyonKohde %}
-<div style="color:green"><h1>{{t.kuvaus}}</h1></div>
+<div style="color:green"><h1>{{tyonKohde.kuvaus}}</h1></div>
 
 <ul>
-    <li><strong>Lisäyspäivä:</strong> {{t.luotu}}</li>
+    <li><strong>Luomispäivä:</strong> {{tyonKohde.luotu}}</li>
 </ul>
 
-<p><strong>Tarkempi kuvaus:</strong> {{t.tarkempi_kuvaus}}</p>
+<p><strong>Tarkempi kuvaus:</strong> {{tyonKohde.tarkempi_kuvaus}}</p>
 
  {% if message != null %}
 <div class="alert alert-success">
   {{message}}
 </div>
   {% endif %}
-{% endfor %}
 
 {% endif %}
 
