--- a/app/views/base.html
+++ b/app/views/base.html
@@ -7,7 +7,7 @@
 
         <title>
             {% block title %}
-            Tietokantasovellus
+            Työnjakaja - Tietokantasovellus
             {% endblock %}
         </title>
 
@@ -23,7 +23,7 @@
     <body>
 
         {% if user_logged_in %}
-        <nav class="navbar navbar-default" role="navigation">
+        <nav class="navbar navbar-default" role="navigation" >
             <div class="container-fluid">
 
                 <div class="navbar-header">
