--- a/app/views/tyonKohde/tyonKohdeMuokkaus.html
+++ b/app/views/tyonKohde/tyonKohdeMuokkaus.html
@@ -21,7 +21,8 @@
     </div>
     <div class="form-group">
         <label for="tarkempi_kuvaus">Tarkempi kuvaus</label>
-        <input type="text" class="form-control" name="tarkempi_kuvaus" value="{{attributes.tarkempi_kuvaus}}">
+        <!--<input type="text" class="form-control" name="tarkempi_kuvaus" value="{{attributes.tarkempi_kuvaus}}">-->
+        <textarea rows="5" cols="10" class="form-control" name="tarkempi_kuvaus">{{attributes.tarkempi_kuvaus}}</textarea>
     </div>    
     
     <button type="submit" class="btn btn-default">Muuta</button>
