--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -9,6 +9,18 @@ ul {
     list-style-type: none;
 }
 
+textArea {
+    text-align: center;
+    max-width: 600px;
+    margin: 0px auto;
+}
+
+input[Type = 'text'] {
+    text-align: center;
+    max-width: 600px;
+    margin: 0px auto;
+}
+
 .navbar .container-fluid{
   max-width: 1200px;
   margin: 0px auto;
