--- a/app/views/base.html
+++ b/app/views/base.html
@@ -20,10 +20,10 @@
         {% endblock %}
     </head>
 
-    <body>
+    <body style="background-color: #e6e6e6;">
 
         {% if user_logged_in %}
-        <nav class="navbar navbar-default" role="navigation" >
+        <nav class="navbar navbar-default" role="navigation">
             <div class="container-fluid">
 
                 <div class="navbar-header">
