--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -1,12 +1,47 @@
 #main-container{
-  max-width: 1200px;
-  padding: 10px 25px;
-  margin: 0px auto;
-  text-align: center;
+    max-width: 1200px;
+    padding: 10px 25px;
+    margin: 0px auto;
+    text-align: center;
 }
 
 ul {
     list-style-type: none;
+}
+
+table {
+    background-color: #86e986;
+    border-collapse: separate;
+    border: solid black 1px;
+    border-radius: 6px;
+}
+
+.table-striped>tbody>tr:nth-child(odd)>td,
+.table-striped>tbody>tr:nth-child(odd)>th {
+    border-collapse: separate;
+    border: solid black 1px;
+    border-radius: 6px;
+}
+
+.table-striped>tbody>tr:nth-child(even)>td,
+.table-striped>tbody>tr:nth-child(even)>th {
+    border-collapse: separate;
+    border: solid black 1px;
+    border-radius: 6px;
+}
+
+td, th {
+    border:solid black 1px;
+}
+
+a {
+    color: #660066;
+    font-weight: bold;
+}
+
+tbody {
+    color: #800000;
+    font-weight: bold;
 }
 
 textArea {
@@ -17,11 +52,23 @@ textArea {
 
 input[Type = 'text'] {
     text-align: center;
-    max-width: 600px;
+    max-width: 600px; 
     margin: 0px auto;
 }
 
 .navbar .container-fluid{
-  max-width: 1200px;
-  margin: 0px auto;
+    max-width: none;
+    margin: 0px auto;
+    background-color: #86e986;
 }
+
+.navbar-default .navbar-brand {
+    color:#000;
+}
+
+.navbar-default .navbar-nav>li>a {
+    color:#000;
+    font-weight: bold;
+}
+
+
