--- a/app/views/etusivu/login.html
+++ b/app/views/etusivu/login.html
@@ -24,7 +24,7 @@
 
     <div class="form-group">
         <label>Salasana</label>
-        <input type="password" class="form-control" name="salasana">
+        <input type="password" class="form-control" name="salasana" id="salasana">
     </div>
 
     <button type="submit" class="btn btn-primary">Kirjaudu sisään</button>
