--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -56,6 +56,12 @@ input[Type = 'text'] {
     margin: 0px auto;
 }
 
+input[Type='password'] {
+    text-align: center;
+    max-width: 600px; 
+    margin: 0px auto;
+}
+
 .navbar .container-fluid{
     max-width: none;
     margin: 0px auto;
