--- a/app/views/kayttaja/kayttajaMuokkaus.html
+++ b/app/views/kayttaja/kayttajaMuokkaus.html
@@ -53,7 +53,7 @@
 
 {% else %}
 
-<div style="color:green"><h1>Kirjaudu sisään muokataksesi tietojasi tai kirjaudu sisään admin-tunnuksella muokataksesi muiden tietoja!</h1></div>
+<div style="color:green"><h1>Kirjaudu sisään admin-tunnuksella muokataksesi muiden tietoja!</h1></div>
 
 {% endif %}
 
