Dokumentaatio päivitetty ja korjattu bugeja

--- a/app/views/etusivu/etusivu.html
+++ b/app/views/etusivu/etusivu.html
@@ -4,7 +4,7 @@
 {% if user_logged_in %}
 
 <div style="color:#3366ff">
-    <h1>Tervetuloa {{user_logged_in.username}}!</h1>
+    <h1>Tervetuloa {{user_logged_in.tunnus}}!</h1>
 </div>
 
 {% if message %}
