--- a/app/views/tyo/tyoKuvaus.html
+++ b/app/views/tyo/tyoKuvaus.html
@@ -6,36 +6,40 @@
 <div style="color:green"><h1>{{tyo.kuvaus}}</h1></div>
 
 <p>
-    <a href="{{base_path}}/tyoPoisto/{{tyo.id}}" class="btn btn-danger">Poista</a> <a href="{{base_path}}/tyoMuokkaus/{{tyo.id}}" class="btn btn-default">Muokkaa</a>
+<form method="get" action="{{base_path}}/tyoPoisto/{{tyo.id}}" class="destroy-form" data-confirm="Oletko varma, että haluat poistaa työn?">
+    <button type="submit" class="btn btn-danger">Poista</button>
+    <a href="{{base_path}}/tyoMuokkaus/{{tyo.id}}" class="btn btn-default">Muokkaa</a>
+</form>
+
 </p>
 
 <ul>
     <li><strong>ID:</strong><font color='red'> {{tyo.id}}</font></li>
     <li><strong>Työn kohde:</strong> <a href="{{base_path}}/tyonKohdeKuvaus/{{tyo.kohde}}"> {{tyo.kohde}}</a></li>
     <li><strong>Työkalu:</strong> <a href="{{base_path}}/tyokaluKuvaus/{{tyo.tyokalu}}"> {{tyo.tyokalu}}</a></li>
-    
-              {% if tyo.tehty %}
-              <li><strong>Tehty: </strong><input type="checkbox" checked="" disabled="disabled"></li>
-              <li><strong>Suoritusaika: </strong>{{tyo.suoritusaika}}</li>
-              {% else %}
-              <li><strong>Tehty: </strong><input type="checkbox" disabled="disabled"></li>
-              {% endif %}
-          
-   
+
+    {% if tyo.tehty %}
+    <li><strong>Tehty: </strong><input type="checkbox" checked="" disabled="disabled"></li>
+    <li><strong>Suoritusaika: </strong>{{tyo.suoritusaika}}</li>
+    {% else %}
+    <li><strong>Tehty: </strong><input type="checkbox" disabled="disabled"></li>
+    {% endif %}
+
+
 </ul>
 <p><strong>Tekijät:</strong></p>
-    {% for tekija in tekijat %}
+{% for tekija in tekijat %}
 <ul>
     <li><a href="{{base_path}}/kayttaja/{{tekija.tunnus}}">{{tekija.tunnus}}</a></li>
 </ul>
-    {% endfor %}
+{% endfor %}
 <p><strong>Tarkempi kuvaus:</strong> {{tyo.tarkempi_kuvaus}}</p>
 
- {% if message %}
+{% if message %}
 <div class="alert alert-success">
-  {{message}}
+    {{message}}
 </div>
-  {% endif %}
+{% endif %}
 
 
 {% else %}
@@ -46,29 +50,29 @@
     <li><strong>ID:</strong><font color='red'> {{tyo.id}}</font></li>
     <li><strong>Työn kohde:</strong> <a href="{{base_path}}/tyonKohdeKuvaus/{{tyo.kohde}}"> {{tyo.kohde}}</a></li>
     <li><strong>Työkalu:</strong> <a href="{{base_path}}/tyokaluKuvaus/{{tyo.tyokalu}}"> {{tyo.tyokalu}}</a></li>
-    
-              {% if tyo.tehty %}
-              <li><strong>Tehty: </strong><input type="checkbox" checked="" disabled="disabled"></li>
-              <li><strong>Suoritusaika: </strong>{{tyo.suoritusaika}}</li>
-              {% else %}
-              <li><strong>Tehty: </strong><input type="checkbox" disabled="disabled"></li>
-              {% endif %}
-          
-   
+
+    {% if tyo.tehty %}
+    <li><strong>Tehty: </strong><input type="checkbox" checked="" disabled="disabled"></li>
+    <li><strong>Suoritusaika: </strong>{{tyo.suoritusaika}}</li>
+    {% else %}
+    <li><strong>Tehty: </strong><input type="checkbox" disabled="disabled"></li>
+    {% endif %}
+
+
 </ul>
 <p><strong>Tekijät:</strong></p>
-    {% for tekija in tekijat %}
+{% for tekija in tekijat %}
 <ul>
     <li><a href="{{base_path}}/kayttaja/{{tekija.tunnus}}">{{tekija.tunnus}}</a></li>
 </ul>
-    {% endfor %}
+{% endfor %}
 <p><strong>Tarkempi kuvaus:</strong> {{tyo.tarkempi_kuvaus}}</p>
 
- {% if message %}
+{% if message %}
 <div class="alert alert-success">
-  {{message}}
+    {{message}}
 </div>
-  {% endif %}
+{% endif %}
 
 {% endif %}
 
