--- a/app/views/tyokalu/tyokaluKuvaus.html
+++ b/app/views/tyokalu/tyokaluKuvaus.html
@@ -16,7 +16,10 @@
 
 <div style="color:green"><h1>{{tyokalu.kuvaus}}</h1></div>
 <p>
-    <a href="{{base_path}}/tyokaluPoisto/{{tyokalu.id}}" class="btn btn-danger">Poista</a> <a href="{{base_path}}/tyokaluMuokkaus/{{tyokalu.id}}" class="btn btn-default">Muokkaa</a>
+<form method="get" action="{{base_path}}/tyokaluPoisto/{{tyokalu.id}}" class="destroy-form" data-confirm="Oletko varma, että haluat poistaa työkalun?">
+    <button type="submit" class="btn btn-danger">Poista</button>
+    <a href="{{base_path}}/tyokaluMuokkaus/{{tyokalu.id}}" class="btn btn-default">Muokkaa</a>
+</form>
 </p>
     <ul>
         <li><strong>Luomispäivä:</strong> {{tyokalu.luotu}}</li>
