Muutettu navigaatiopalkki kiinteäksi

--- a/app/views/base.html
+++ b/app/views/base.html
@@ -23,7 +23,7 @@
     <body style="background-color: #e6e6e6;">
 
         {% if user_logged_in %}
-        <nav class="navbar navbar-default" role="navigation">
+        <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
             <div class="container-fluid">
 
                 <div class="navbar-header">
@@ -55,7 +55,7 @@
 
         {% else %}
         
-                <nav class="navbar navbar-default" role="navigation">
+                <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
             <div class="container-fluid">
 
                 <div class="navbar-header">
