--- a/app/views/tyo/tyoKuvaus.html
+++ b/app/views/tyo/tyoKuvaus.html
@@ -62,7 +62,7 @@
     <li><strong>Tehty: </strong><input type="checkbox" disabled="disabled"></li>
     {% endif %}
 
-
+    
 </ul>
 <p><strong>Tekijät:</strong></p>
 {% for tekija in tekijat %}
@@ -71,9 +71,13 @@
 </ul>
 {% endfor %}
 <p><strong>Tarkempi kuvaus:</strong> {{tyo.tarkempi_kuvaus}}</p>
-
+<br>
+<br>
+<br>
+{% if user_logged_in.tunnus in tekijat|keys %}
 {% if tyo.tehty == null %}
 <a href="{{base_path}}/tyoTehty/{{tyo.id}}" class="btn btn-success">Kuittaa tehdyksi</a>
+{% endif %}
 {% endif %}
 {% if message %}
 <div class="alert alert-success">
