--- a/app/views/index/index.html
+++ b/app/views/index/index.html
@@ -4,7 +4,7 @@
 {% if user_logged_in %}
 
 <div style="color:#3366ff">
-    <h1>Tervetuloa {{user_logged_in.tunnus}}!</h1>
+    <h1>Tervetuloa {{user_logged_in.username}}!</h1>
 </div>
 
 {% if message %}
@@ -29,15 +29,15 @@
 
 
     <tbody>
-        {% if omatTyot %}
+        {% if usersWorks %}
 
-        {% for tyo in omatTyot %}
+        {% for work in usersWorks %}
         <tr>
-            <td>{{tyo.id}}</td>
-            <td><a href="{{base_path}}/tyo/{{tyo.id}}">{{tyo.kuvaus}}</td>
-            <td><a href="{{base_path}}/tyonKohdeKuvaus/{{tyo.kohde}}">{{tyo.kohde}}</td>
-            <td><a href="{{base_path}}/tyokaluKuvaus/{{tyo.tyokalu}}">{{tyo.tyokalu}}</td>
-            {% if tyo.tehty %}
+            <td>{{work.id}}</td>
+            <td><a href="{{base_path}}/work/{{work.id}}">{{work.description}}</td>
+            <td><a href="{{base_path}}/workObjectDesc/{{work.object}}">{{work.object}}</td>
+            <td><a href="{{base_path}}/workToolDesc/{{work.tool}}">{{work.tool}}</td>
+            {% if work.done %}
             <td> <input type="checkbox" checked="" disabled="disabled" /></td>
             {% else %}
             <td> <input type="checkbox" disabled="disabled" /></td>
@@ -68,7 +68,7 @@
 <p> Työnjakajalla voit helposti jakaa esimerkiksi kotitaloutesi kotityöt perheen kesken!</p>
 <p> <a href="{{base_path}}/login">Kirjaudu sisään</a> ja aloita käyttö!</p>
 
-<a href="{{base_path}}/login" class="btn btn-primary">Kirjaudu</a><a href="{{base_path}}/rekisteroityminen" class="btn btn-default">Rekisteröidy</a>
+<a href="{{base_path}}/login" class="btn btn-primary">Kirjaudu</a><a href="{{base_path}}/register" class="btn btn-default">Rekisteröidy</a>
 
 {% endif %}
 
