--- a/app/views/index/login.html
+++ b/app/views/index/login.html
@@ -13,18 +13,18 @@
 </div>
 {% endif %}
 
-<a href="{{base_path}}/rekisteroityminen" class="btn btn-default">Rekisteröidy</a>
+<a href="{{base_path}}/register" class="btn btn-default">Rekisteröidy</a>
 <form method="post" action="{{base_path}}/logging">
 
     <div class="form-group">
         <label>Käyttäjätunnus</label>
-        <input type="text" class="form-control" name="tunnus" value="{{tunnus}}">
+        <input type="text" class="form-control" name="username" value="{{username}}">
     </div>
 
 
     <div class="form-group">
         <label>Salasana</label>
-        <input type="password" class="form-control" name="salasana" id="salasana">
+        <input type="password" class="form-control" name="password" id="password">
     </div>
 
     <button type="submit" class="btn btn-primary">Kirjaudu sisään</button>
