--- a/app/views/user/user.html
+++ b/app/views/user/user.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 
-{% if (user_logged_in.admin) or (user_logged_in.tunnus == kayttaja.tunnus) %}
+{% if (user_logged_in.admin) or (user_logged_in.username == user.username) %}
 
 {% if errors %}
 <div class="alert alert-danger">
@@ -12,29 +12,29 @@
         {% endfor %}
     </ul>
     <br>
-    <form method="get" action="{{base_path}}/kayttajaPoisto/{{kayttaja.tunnus}}/rekursiivi" class="destroy-form" data-confirm="Olet poistamassa käyttäjän {{kayttaja.tunnus}}, vaikka hänellä on tekemättömiä töitä. Jatketaanko?">
+    <form method="get" action="{{base_path}}/userDelete/{{user.username}}/rekursive" class="destroy-form" data-confirm="Olet poistamassa käyttäjän {{user.username}}, vaikka hänellä on tekemättömiä töitä. Jatketaanko?">
         <button type="submit" class="btn btn-danger">Poista silti</button>
     </form>
 </div>
 {% endif %}
 
-<div style="color:green"><h1>{{kayttaja.tunnus}}</h1></div>
+<div style="color:green"><h1>{{user.username}}</h1></div>
 <p>
-<form method="get" action="{{base_path}}/kayttajaPoisto/{{kayttaja.tunnus}}" class="destroy-form" data-confirm="Oletko varma, että haluat poistaa käyttäjän {{kayttaja.tunnus}}?">
+<form method="get" action="{{base_path}}/userDelete/{{user.username}}" class="destroy-form" data-confirm="Oletko varma, että haluat poistaa käyttäjän {{user.username}}?">
     <button type="submit" class="btn btn-danger">Poista</button>
-    <a href="{{base_path}}/kayttajaMuokkaus/{{kayttaja.tunnus}}" class="btn btn-default">Muokkaa</a>
+    <a href="{{base_path}}/userEdit/{{user.username}}" class="btn btn-default">Muokkaa</a>
 </form>
 </p>
 
 <ul>
-    <li><strong>Ikä:</strong> {{kayttaja.ika}}</li>
-    {% if kayttaja.admin %}
+    <li><strong>Ikä:</strong> {{user.age}}</li>
+    {% if user.admin %}
     <li><strong>Admin: </strong><input type="checkbox" checked="checked" disabled="disabled" /></li>
     {% else %}
     <li><strong>Admin: </strong><input type="checkbox" disabled="disabled" /></li>
     {% endif %}
 </ul>
-<p><Strong>Tarkempi kuvaus:</strong> {{kayttaja.kuvaus}}</p>
+<p><Strong>Käyttäjän kuvaus:</strong> {{user.description}}</p>
 
  {% if message != null %}
 <div class="alert alert-success">
@@ -55,12 +55,12 @@
 {% endif %}
 
 
-<div style="color:green"><h1>{{kayttaja.tunnus}}</h1></div>
+<div style="color:green"><h1>{{user.username}}</h1></div>
 
 
 <ul>
-    <li><strong>Ikä:</strong> {{kayttaja.ika}}</li>
-    {% if kayttaja.admin %}
+    <li><strong>Ikä:</strong> {{user.age}}</li>
+    {% if user.admin %}
     <li><strong>Admin: </strong><input type="checkbox" checked="checked" disabled="disabled" /></li>
     {% else %}
     <li><strong>Admin: </strong><input type="checkbox" disabled="disabled" /></li>
@@ -69,7 +69,7 @@
 
 
 
-<p><Strong>Tarkempi kuvaus:</strong> {{kayttaja.kuvaus}}</p>
+<p><Strong>Käyttäjän kuvaus:</strong> {{user.description}}</p>
 
  {% if message != null %}
 <div class="alert alert-success">
