--- a/app/views/work/works.html
+++ b/app/views/work/works.html
@@ -3,14 +3,14 @@
 
 <div style="color:green"><h1>Näkymä - Työt</h1></div>
 <br>
-<form action="{{base_path}}/etsiTyo" method="post">
-    <input list="etsiTyo" name="kuvaus">
-    <datalist id="etsiTyo">
-        {% for t in tyot %}
-        <option value="{{t.kuvaus}}">
+<form action="{{base_path}}/findWork" method="post">
+    <input list="findWork" name="description">
+    <datalist id="findWork">
+        {% for work in works %}
+        <option value="{{work.description}}">
             {% endfor %}
     </datalist>
-    <input type="submit" value="etsi">
+    <input type="submit" value="find">
 </form>
 
 {% if message != null %}
@@ -22,7 +22,7 @@
 
 <br>
 <p>
-    <a href="{{base_path}}/uusiTyo" class="btn btn-success">Lisää työ</a>
+    <a href="{{base_path}}/newWork" class="btn btn-success">Lisää työ</a>
 </p>
 
 <table class="table table-striped table-bordered">
@@ -37,13 +37,13 @@
     </thead>
 
     <tbody>
-        {% for tyo in tyot %}
+        {% for work in works %}
         <tr>
-            <td>{{tyo.id}}</td>
-            <td><a href="{{base_path}}/tyo/{{tyo.id}}">{{tyo.kuvaus}}</td>
-            <td><a href="{{base_path}}/tyonKohdeKuvaus/{{tyo.kohde}}">{{tyo.kohde}}</td>
-            <td><a href="{{base_path}}/tyokaluKuvaus/{{tyo.tyokalu}}">{{tyo.tyokalu}}</td>
-            {% if tyo.tehty %}
+            <td>{{work.id}}</td>
+            <td><a href="{{base_path}}/work/{{work.id}}">{{work.description}}</td>
+            <td><a href="{{base_path}}/workObjectDesc/{{work.object}}">{{work.object}}</td>
+            <td><a href="{{base_path}}/workToolDesc/{{work.tool}}">{{work.tool}}</td>
+            {% if work.done %}
             <td> <input type="checkbox" checked="" disabled="disabled" /></td>
             {% else %}
             <td> <input type="checkbox" disabled="disabled" /></td>
