--- a/app/views/workTool/workToolEdit.html
+++ b/app/views/workTool/workToolEdit.html
@@ -13,15 +13,14 @@
 </div>
 {% endif %}
 
-<form method="post" action="{{base_path}}/tyokaluMuokkaaminen/{{attributes.id}}">
+<form method="post" action="{{base_path}}/workToolEditing/{{attributes.id}}">
     <div class="form-group">
-        <label for="kuvaus">Kuvaus</label>
-        <input type="Text" class="form-control" name="kuvaus" value="{{attributes.kuvaus}}">
+        <label for="description">Kuvaus</label>
+        <input type="Text" class="form-control" name="description" value="{{attributes.description}}">
     </div>
     <div class="form-group">
-        <label for="tarkempi_kuvaus">Tarkempi kuvaus</label>
-        <!--<input type="text" class="form-control" name="tarkempi_kuvaus" value="{{attributes.tarkempi_kuvaus}}">-->
-        <textarea rows="5" cols="10" class="form-control" name="tarkempi_kuvaus">{{attributes.tarkempi_kuvaus}}</textarea>
+        <label for="longer_description">Tarkempi kuvaus</label>
+        <textarea rows="5" cols="10" class="form-control" name="longer_description">{{attributes.longer_description}}</textarea>
     </div>    
     
     <button type="submit" class="btn btn-default">Muuta</button>
