--- a/app/views/index/register.html
+++ b/app/views/index/register.html
@@ -30,7 +30,7 @@
         <textarea rows="5" cols="10" class="form-control" name="description" placeholder="Anna tarkempi kuvaus itsestäsi">{{attributes.description}}</textarea>
     </div>  
     
-    <div class="form-group">
+<!--    <div class="form-group">
         <label for="admin">Tehdäänkö admin tili?</label>
         <select name="admin">
             {% if attributes.admin %}
@@ -41,7 +41,7 @@
             <option value="1">Kyllä</option>      
             {% endif %}
         </select>
-    </div>    
+    </div>    -->
     
     <button type="submit" class="btn btn-default">Luo</button>
 </form>
